# hacktx24

./: .gitignore  README.md
backend/: __init__.py  conflict.py  main.py  mock_conflict.txt  repository.py
cli/: .gitignore  boxes.tcss  inference.py  main.py  prompt.txt  pyproject.toml  requirements.txt
cli/backend/: .gitignore  __init__.py  commit.py  conflict.py  main.py  merge_conflict_manager.py  mock_conflict.txt  openai.py  repository.py  resolution.py  test.py  test_conflict.py
cli/merge_conflicts/: conflict_four.txt  conflict_one.txt  conflict_three.txt  conflict_two.txt
fastapi/: main.py
fastapi/endpoints/: model.py  repo_info.py
mergr/: CHANGELOG.md  README.md  package-lock.json  package.json
mergr/src/: extension.ts
